extract endpoint from html in config

--- a/Develop/backend/StudyGO.API/StudyGO.API/wwwroot/html/confirm-email.html
+++ b/Develop/backend/StudyGO.API/StudyGO.API/wwwroot/html/confirm-email.html
@@ -19,7 +19,7 @@
 
     document.getElementById('confirmBtn').addEventListener('click', async () => {
         try {
-            const response = await fetch('/Account/ConfirmEmail', {
+            const response = await fetch('{ENDPOINT}', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
